--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Naturapeute Pro</title>
 <link rel="stylesheet" href="/assets/css/main.css">
-<script src="./dist/index.js" type="module"></script>
+<script src="/assets/js/page/page.js"></script>
+<script src="/dist/index.js" type="module"></script>
 
 <x-app></x-app>
 <footer></footer>
