collect css into dashboard.css

--- a/bricks/page-client.html
+++ b/bricks/page-client.html
@@ -8,6 +8,11 @@
       <label>Age</label>
       <input name="age" type="number" required>
     </div>
+
+    <footer class="row">
+      <button class="primary">Save</button>
+      <a href="/clients" class="button">Cancel</a>
+    </footer>
   </form>
 </template>
 
