added readme with npm

--- a/bricks/x-app.html
+++ b/bricks/x-app.html
@@ -1,6 +1,9 @@
 <template>
   <section class="menu">
-    <header>Naturapeute Pro</header>
+    <header>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/archive/4/4e/20160311154844%21Open_Source_Initiative_keyhole.svg" alt="Logo">
+      <h1>Open Dashboard</h1>
+    </header>
     <nav>
       <a href="/">Dashboard</a>
       <a href="/clients">Clients</a>
