--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Naturapeute Pro</title>
+<title>Open Dashboard</title>
 <link rel="stylesheet" href="/assets/css/main.css">
 <script src="/assets/js/utils.js"></script>
 <script src="/assets/js/page/page.js"></script>
