--- a/bricks/page-dashboard.html
+++ b/bricks/page-dashboard.html
@@ -12,7 +12,7 @@
         <tr :for="user in state.users">
           <td>${ user.name }</td>
           <td>${ user.age }</td>
-          <td><a href="#!/client/${ user.id }" class="button">Edit</a></td>
+          <td><a href="/client/${ user.id }" class="button">Edit</a></td>
         </tr>
       </tbody>
     </table>
